// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FolderSurveySelector Tests +++ calls for new levels and update state when option is selected 1`] = `
<div>
  <div>
    <select
      data-testid="folder-survey-select-0"
    >
      <option
        value="0"
      >
        Choose a folder or survey
      </option>
      <option
        value="153142013"
      >
        Folder with few large data sets
      </option>
    </select>
    <select
      data-testid="folder-survey-select-1"
    >
      <option
        value="0"
      >
        Choose a folder or survey
      </option>
      <option
        value="152342023"
      >
        BAR-handpump
      </option>
    </select>
  </div>
</div>
`;

exports[`FolderSurveySelector Tests +++ renders <snapshot> 1`] = `
<div>
  <div>
    <select
      data-testid="folder-survey-select-0"
    >
      <option
        value="0"
      >
        Choose a folder or survey
      </option>
      <option
        value="153142013"
      >
        Folder with few large data sets
      </option>
    </select>
  </div>
</div>
`;
